--- a/com.store.smhilaw1.MainActivity/res/values/strings.xml
+++ b/com.store.smhilaw1.MainActivity/res/values/strings.xml
@@ -28,8 +28,8 @@
 	<string name="cancle">取消</string>
 	<string name="checknetwork">网络错误，请检查</string>
 	<string name="unknownError">出现未知错误，请重试</string>
-	
-	
-	
-	
+	<string name="artist">歌手</string>
+	<string name="pubdate">发行日期</string>
+	<string name="language">语言</string>
+	<string name="company">唱片公司</string>
 </resources>
