--- a/com.store.smhilaw1.MainActivity/res/values/strings.xml
+++ b/com.store.smhilaw1.MainActivity/res/values/strings.xml
@@ -32,4 +32,7 @@
 	<string name="pubdate">发行日期</string>
 	<string name="language">语言</string>
 	<string name="company">唱片公司</string>
+	<string name="searchkey">请输入关键字</string>
+	
+	<string name="nocontent">没有您想要的数据，请重试</string>
 </resources>
