修正播放bug,调整分页。还剩一个光标控制，还有一个搜索的图标替换，还有写一个自己的播放器

--- a/com.store.smhilaw1.MainActivity/res/values/strings.xml
+++ b/com.store.smhilaw1.MainActivity/res/values/strings.xml
@@ -33,6 +33,7 @@
 	<string name="language">语言</string>
 	<string name="company">唱片公司</string>
 	<string name="searchkey">请输入关键字</string>
-	
 	<string name="nocontent">没有您想要的数据，请重试</string>
+	<string name="exit">是否选择退出</string>
+	<string name="exitContent">是否选择退出音乐商城</string>
 </resources>
